--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,7 @@ dependencies {
     // retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile "com.squareup.retrofit2:converter-gson:+"
+
+    // app compat
+    compile "com.android.support:appcompat-v7:25.2.0"
 }
