--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,9 +21,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    // instrumented test
+    androidTestCompile 'com.android.support:support-annotations:25.2.0'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile("com.android.support.test.espresso:espresso-intents:2.2.2", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
     testCompile 'junit:junit:4.12'
     // mockito
     testCompile "org.mockito:mockito-core:2.0.57-beta"
@@ -32,5 +40,7 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:+"
 
     // app compat
-    compile "com.android.support:appcompat-v7:25.2.0"
+    compile "com.android.support:appcompat-v7:25.2.0", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    }
 }
