--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,13 @@ dependencies {
     androidTestCompile("com.android.support.test.espresso:espresso-intents:2.2.2", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude module: 'support-annotations'
+        exclude module: 'support-v4'
+        exclude module: 'support-v13'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'design'
+    })
 
     testCompile 'junit:junit:4.12'
     // mockito
