--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,9 @@
     package="com.leo.moviehunter" >
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         <activity android:name=".activity.MainActivity" >
             <intent-filter>
@@ -17,8 +15,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.TargetActivity" >
-        </activity>
+        <activity android:name=".activity.TargetActivity" />
     </application>
 
 </manifest>
