--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name=".provider.UserDataProvider"
+            android:authorities="com.leo.moviehunter.userdata"
+            android:exported="false"
+            />
+
     </application>
 
 </manifest>
