--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
 
     // google analytics
     compile 'com.google.android.gms:play-services-analytics:10.0.1'
+
+    // google auth
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
 }
 
 // google analytics
