--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,19 @@ dependencies {
 
     // google auth
     compile 'com.google.android.gms:play-services-auth:10.0.1'
+
+    // firebase
+//    compile 'com.google.firebase:firebase-core:10.2.1'
+//    compile 'com.google.firebase:firebase-database:10.2.1'
+
+    // leak canary
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
+    // butter knife
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 
 // google analytics
