--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,14 +70,14 @@ dependencies {
     compile 'com.vincentbrison.openlibraries.android:dualcache-jsonserializer:3.1.1'
 
     // google analytics
-    compile 'com.google.android.gms:play-services-analytics:10.0.1'
+    compile 'com.google.android.gms:play-services-analytics:10.2.6'
 
     // google auth
-    compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.2.6'
 
     // firebase
-//    compile 'com.google.firebase:firebase-core:10.2.1'
-//    compile 'com.google.firebase:firebase-database:10.2.1'
+    compile 'com.google.firebase:firebase-core:10.2.6'
+    compile 'com.google.firebase:firebase-auth:10.2.6'
 
     // leak canary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
@@ -90,4 +90,5 @@ dependencies {
 }
 
 // google analytics
+// firebase
 apply plugin: 'com.google.gms.google-services'
