--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.3'
 
         // google analytics
-        classpath 'com.google.gms:google-services:3.0.0'
+        // firebase
+        classpath 'com.google.gms:google-services:3.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
