--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.2.6'
     compile 'com.google.firebase:firebase-auth:10.2.6'
     compile 'com.google.firebase:firebase-database:10.2.6'
+    compile 'com.google.firebase:firebase-messaging:10.2.6'
 
     // leak canary
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
